--- a/suit website/style.css
+++ b/suit website/style.css
@@ -1,44 +1,29 @@
-img{max-width: 100%;
-height: auto;
-border-radius: 10px 10px 0 0;
-display: block;}
-*{ margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'poppins', sans-serif;}
-
-body{ background-color: black;
-    color: white;
-}
-
-h2{text-align: center;
-    margin-top: 10px;
-margin-bottom: 10px;
-font-family: Georgia, 'Times New Roman', Times, serif;}
-
+img{ max-width: 100%; height: auto; border-radius: 10px 10px 0 0;display: block; }
+* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif;}
+body{ background-color: black; color: white;}
+H2{text-align: center; margin-top: 10px;margin-bottom:10px; font-family: Georgia, 'Times New Roman', Times, serif; }
 
 .CATEGORIES{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+     display: grid;
+     grid-template-columns: repeat(2,1fr);
     gap: 20px;
     padding: 10px;
     align-items: stretch;
 }
-
-@media (min-width:600px){.CATEGORIES{ grid-template-columns: repeat(3,1fr
-    );
-}
-}
-
-@media(min-width:1025p){
+@media (min-width:600px) {
     .CATEGORIES{
-        grid-template-columns: repeat(auto-fit, minmax (150px));
+        grid-template-columns: repeat(3,1fr);
+    
     }
 }
-
+@media (min-width:1025px){
+    .CATEGORIES{
+        grid-template-columns: repeat (auto-fit, minmax (150px,1fr));}
+}
 .category-card{
     display: flex;
     flex-direction: column;
+    ;
     height: 100%;
     border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
@@ -46,36 +31,35 @@ font-family: Georgia, 'Times New Roman', Times, serif;}
 
 .category-card:hover{
     transform: translateY(-10px);
-    box-shadow: 0 10px 20px rgba(red, green, blue, alpha)(0,0,0,0.2);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
 .Names{margin-top: 8px;
 text-align: center;
-font-weight: bold;
-}
+font-weight: bold;}
 
-.image-frame{border: 1px solid darkorange;
-border-radius: 10px;
-padding: 5px;
-height: auto;
-width: 100%;
-aspect-ratio: calc(4/5);}
+.image-frame{border: 1px solid darkorange; 
+    border-radius: 10px;
+     padding: 5px; 
+     height: auto;
+      width: 100%;
+    aspect-ratio: calc(4/5);}
+      
 
-#menu{ display: none;
+#menu{display:none ;
 position: absolute;
-top: 60px;
+top: 60px; 
 right: 20px;
 background-color: black;
 flex-direction: column;
-border: 1px solid darkorange;
-}
+border: 1px solid darkorange;}
 
-#menu.show{display: flex;}
+#menu.show{display:flex;}
 
-#menu a{ padding: 12px 18px;
+#menu a{padding: 12px 18px;
 text-decoration: none;
-border-bottom: 1px solid darkorange;
-color: white;}
+border-bottom: 1px solid darkorange; 
+color: white;
+}
 
 .image-frame img{width: 100%;
 height: 100%;
@@ -83,17 +67,49 @@ object-fit: cover;
 border-radius: 10px;
 display: block;}
 
-#menu a:hover{ background-color: darkorange;}
+#menu a:hover{background-color: darkorange; }
 
-#menu-icon{ font-size: 30px;
+#menu-icon{ font-size: 30px; 
 cursor: pointer;
 display: inline-block;
 padding: 5px;}
 
 h3{text-align: center;
-margin: top 15%;
-font-family: Georgia, 'Times New Roman', Times, serif;
-border: 2px solid darkorange;
-border-bottom: 1px solid darkorange;
+margin: 15px;
+margin-top: 15%;
+font-family:Georgia, 'Times New Roman', Times, serif;
+border: 1px solid darkorange; 
+border-bottom: 1px solid darkorange;;
 border-radius: 80px;
 padding: 10px;}
+
+p{margin-bottom: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 1.5;
+}
+
+h2.store{margin-bottom: 5%;
+    margin-top: 10%;
+}
+.read-more{border: 1px solid darkorange;
+padding: 5px;
+color: white;
+display: inline-block;
+border-radius: 10px;
+margin: 5px;
+text-decoration: none;}
+
+hr{margin-top: 50px;
+}
+
+h2.Guidlines{margin-top: 20px;}
+
+.icon{width: 50px;
+height: auto;}
+
+.container{display: flex;
+justify-content: center;
+margin-top: 2%;}
+
+.space{margin:10px;
+text-align: justify;}
