--- a/suit website/style.css
+++ b/suit website/style.css
@@ -126,4 +126,11 @@ text-align: justify;}
     border-radius: 50%;
     border: 1px solid #ccc;
     cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.swatch:hover{
+    transform: scale(1.3);
+    border: 2px solid darkorange;
+    transition: transform 0.2s, border 0.2;
 }
