--- a/suit website/style.css
+++ b/suit website/style.css
@@ -116,8 +116,11 @@ text-align: justify;}
 
 .color-palette {
     display: flex;
-    gap: 10px;
-    margin-top: 5px;
+    gap: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .swatch {
