--- a/suit website/style.css
+++ b/suit website/style.css
@@ -192,13 +192,16 @@ h2.breasted{margin-bottom:20px ;}
               transform 5s cubic-bezier(0.5, 0, 02, 0.1);
   will-change: opacity, transform;
 }
+
+/*
 .reveal.from-left {
   transform: translateX(-20px);
 }
 
-/* Cards coming from the right */
+ Cards coming from the right 
 .reveal.from-right {
   transform: translateX(20px);}
+  */
 .reveal.active {
   opacity: 1;
   transform: translateX(0);
